--- a/app/src/main/res/layout/activity_game_main.xml
+++ b/app/src/main/res/layout/activity_game_main.xml
@@ -6,6 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/moves_number2"
+        android:layout_width="72dp"
+        android:layout_height="17dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="16dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="390dp"
@@ -107,19 +118,35 @@
 
             <TextView
                 android:id="@+id/moves_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="48dp"
+                android:layout_height="26dp"
                 android:layout_marginBottom="16dp"
                 android:text="TextView"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:layout_editor_absoluteX="0dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.213"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/max_number"
+                android:layout_width="42dp"
+                android:layout_height="27dp"
+                android:layout_marginBottom="16dp"
+                android:text="/   15"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.802"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/record"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/record"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="Movements"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/moves_number"
                 app:layout_constraintTop_toTopOf="parent"
@@ -128,14 +155,249 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/grid_layout"
-        android:layout_width="409dp"
-        android:layout_height="426dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="143dp">
+    <GridLayout
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:columnCount="7"
+        android:rowCount="7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.477">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/pat1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="0"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#E1F1E576"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="1"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#E1F1E576"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="2"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#E1F1E576"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat4"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="3"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#E1F1E576"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat5"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="4"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#E1F1E576"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat6"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="5"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#E1F1E576"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat7"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="0"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat8"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="1"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat9"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="2"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat10"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="3"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat11"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="4"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat12"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="5"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/pat13"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="6"
+            android:layout_rowSpan="1"
+            android:layout_column="6"
+            android:layout_columnSpan="1"
+            android:background="#3CC394"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/target"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_row="2"
+            android:layout_rowSpan="1"
+            android:layout_column="1"
+            android:layout_columnSpan="2"
+            android:background="#0CE643"
+            android:text="target" />
+
+        <TextView
+            android:id="@+id/car1"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_row="0"
+            android:layout_rowSpan="0"
+            android:layout_column="1"
+            android:layout_columnSpan="3"
+            android:background="@drawable/block_background"
+            android:text="CAR1" />
+
+        <TextView
+            android:id="@+id/car2"
+            android:layout_width="50dp"
+            android:layout_height="150dp"
+            android:layout_row="1"
+            android:layout_rowSpan="3"
+            android:layout_column="3"
+            android:background="@drawable/block_background"
+            android:text="car2" />
+
+        <TextView
+            android:id="@+id/car3"
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:layout_row="3"
+            android:layout_rowSpan="2"
+            android:layout_column="1"
+            android:background="@drawable/block_background"
+            android:text="car3" />
+
+        <TextView
+            android:id="@+id/car4"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_row="5"
+            android:layout_rowSpan="1"
+            android:layout_column="1"
+            android:layout_columnSpan="3"
+            android:background="@drawable/block_background"
+            android:text="car4" />
+
+        <TextView
+            android:id="@+id/car5"
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:layout_row="4"
+            android:layout_rowSpan="2"
+            android:layout_column="5"
+            android:layout_columnSpan="1"
+            android:background="@drawable/block_background"
+            android:text="car5" />
+
+        <TextView
+            android:id="@+id/car6"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_row="3"
+            android:layout_rowSpan="1"
+            android:layout_column="5"
+            android:layout_columnSpan="2"
+            android:background="@drawable/block_background"
+            android:text="car6" />
+
+        <TextView
+            android:id="@+id/car7"
+            android:layout_width="50dp"
+            android:layout_height="150dp"
+            android:layout_row="0"
+            android:layout_rowSpan="3"
+            android:layout_column="6"
+            android:layout_columnSpan="1"
+            android:background="@drawable/block_background"
+            android:text="car7" />
+
+    </GridLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
