--- a/app/src/main/res/drawable/grid_background.xml
+++ b/app/src/main/res/drawable/grid_background.xml
@@ -12,6 +12,8 @@
     </item>
 
     <item>
+        android:bottom = "4dp"
+        android:top="4dp"
         <shape android:shape="rectangle">
         </shape>
     </item>
