--- a/app/src/main/res/layout/activity_game_test.xml
+++ b/app/src/main/res/layout/activity_game_test.xml
@@ -5,6 +5,7 @@
     android:id="@+id/all_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFB74D"
     tools:context=".GameTest">
 
     <LinearLayout
@@ -56,6 +57,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:text="Puzzle"
+                        android:textStyle="bold"
                         android:textAlignment="center" />
 
                     <TextView
@@ -65,6 +67,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:text="1"
+                        android:textStyle="bold"
                         android:textAlignment="center" />
                 </LinearLayout>
 
@@ -97,19 +100,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/moves"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Moves"
-                    android:textAlignment="center" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/nb_moves"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView"
-                    android:textAlignment="center" />
+                    <TextView
+                        android:id="@+id/moves"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Moves: "
+                        android:textStyle="bold"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/nb_moves"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="TextView"
+                        android:textStyle="bold"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -121,6 +134,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Record: "
+                        android:textStyle="bold"
                         android:textAlignment="center" />
 
                     <TextView
@@ -129,6 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="--/"
+                        android:textStyle="bold"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -145,11 +160,11 @@
         android:layout_marginEnd="50dp"
         android:columnCount="7"
         android:rowCount="7"
+        android:background="#3CC394"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
 
         <TextView
             android:id="@+id/pat1"
@@ -159,9 +174,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#E1F1E576"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat2"
@@ -171,9 +184,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#E1F1E576"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat3"
@@ -183,9 +194,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#E1F1E576"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat4"
@@ -195,9 +204,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#E1F1E576"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D"/>
 
         <TextView
             android:id="@+id/pat5"
@@ -207,9 +214,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#E1F1E576"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat6"
@@ -219,9 +224,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#E1F1E576"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat7"
@@ -231,9 +234,7 @@
             android:layout_rowSpan="1"
             android:layout_column="0"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D"/>
 
         <TextView
             android:id="@+id/pat8"
@@ -243,9 +244,7 @@
             android:layout_rowSpan="1"
             android:layout_column="1"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat9"
@@ -255,9 +254,7 @@
             android:layout_rowSpan="1"
             android:layout_column="2"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat10"
@@ -267,9 +264,7 @@
             android:layout_rowSpan="1"
             android:layout_column="3"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat11"
@@ -279,9 +274,7 @@
             android:layout_rowSpan="1"
             android:layout_column="4"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat12"
@@ -291,9 +284,7 @@
             android:layout_rowSpan="1"
             android:layout_column="5"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/pat13"
@@ -303,9 +294,7 @@
             android:layout_rowSpan="1"
             android:layout_column="6"
             android:layout_columnSpan="1"
-            android:background="#3CC394"
-            android:visibility="invisible"
-            tools:visibility="invisible" />
+            android:background="#FFB74D" />
 
         <TextView
             android:id="@+id/target"
